--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
-	<title>Hello git.</title>
+	<title>PeaceSells - Hello git.</title>
 </head>
 <body>
-	
+	<header>
+		<ul>
+			<li>Home</li>
+			<li>About</li>
+			<li>Portfolio</li>
+			<li>Services</li>
+			<li>Contact</li>
+		</ul>
+	</header>
+	<div class="hello-github">
+		<h2>Hello Github!</h2>
+	</div>
+	<div class="animation-area">
+		<ul class="box-area">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
 </body>
 </html>
