Add word and hyperlinks.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
 	<header>
 		<ul>
-			<li>Home</li>
-			<li>About</li>
-			<li>Portfolio</li>
-			<li>Services</li>
-			<li>Contact</li>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Portfolio</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Contact</a></li>
 		</ul>
 	</header>
 	<div class="hello-github">
 		<h2>Hello Github!</h2>
+		<h3>Gradient and animation with pure CSS.</h3>
 	</div>
 	<div class="animation-area">
 		<ul class="box-area">
